testAi.log
file:///Users/samiafzal/Desktop/FYP/brandy-backend/testAi.js:16
    import Influencer from './server/src/modules/influencer/influencer.model.js';
           ^^^^^^^^^^

SyntaxError: Unexpected identifier 'Influencer'
    at compileSourceTextModule (node:internal/modules/esm/utils:344:16)
    at ModuleLoader.moduleStrategy (node:internal/modules/esm/translators:105:18)
    at #translate (node:internal/modules/esm/loader:534:12)
    at ModuleLoader.loadAndTranslate (node:internal/modules/esm/loader:581:27)
    at async ModuleJob._link (node:internal/modules/esm/module_job:154:19)

Node.js v22.17.0
